...
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ItemListActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/items_nav_bar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/blue"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

...
            android:id="@+id/sort_filter_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="Sort/Filter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/logout_button"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Logout Button -->
        <Button
            android:id="@+id/logout_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Logout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="16dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/item_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/items_nav_bar" />

...
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="Total"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/total_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/total_title"
                android:layout_centerHorizontal="true"
                android:text="$0.00"
                android:textSize="30dp" />

        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add_item_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="35dp"
...
            android:textColorHighlight="@color/blue"
            android:textSize="20sp"
            app:rippleColor="@color/blue"
            app:srcCompat="@android:drawable/ic_input_add" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/delete_item_button"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="35dp"
...
