...
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible"
            android:layout_below="@id/toggleButtons">

            <EditText
                android:id="@+id/loginEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email"
                android:inputType="textEmailAddress"/>

            <EditText
                android:id="@+id/loginPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:inputType="textPassword"/>

            <Button
                android:id="@+id/buttonLoginSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="SIGN IN"
                android:onClick="onLoginSubmitClicked"/>

            <Button
                android:id="@+id/buttonLoginCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Repeat Password"
                android:inputType="textPassword"/>

            <Button
                android:id="@+id/buttonSignupSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="CREATE ACCOUNT"
                android:onClick="onSignupSubmitClicked"/>

            <Button
                android:id="@+id/buttonSignupCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
