...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="600sp">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/photoCameraButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:contentDescription="Photo Camera Button"
        android:src="@android:drawable/ic_menu_camera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/photo_grid"
        app:layout_constraintEnd_toStartOf="@id/photoGalleryButton"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/photoGalleryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
