...
        android:layout_width="match_parent"
        android:layout_height="600sp"
        android:id = "@+id/add_edit_container"
        tools:ignore="InvalidId,MissingConstraints" />

    <EditText
        android:id="@+id/add_item_name"
        android:layout_width="250sp"
        android:layout_height="50sp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="81dp"
        android:layout_marginBottom="5dp"
        android:hint="Item name"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/add_item_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/add_item_date"
...
        android:layout_marginEnd="81dp"
        android:layout_marginBottom="5dp"
        android:textSize="18sp"
        android:ems="10"
        android:hint="date of purchase"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/add_item_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_item_name" />

    <EditText
        android:id="@+id/add_item_description"
...
        android:layout_marginStart="80dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:hint="serial number"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/add_item_price"
        app:layout_constraintEnd_toStartOf="@+id/scan_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_item_model" />

    <EditText
...
