...
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/item"
    android:background="@drawable/item_separation_lines">

    <CheckBox
        android:id="@+id/check_box"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/item_name"
...
